# blackbox-rpc-transfer

./: CMakeLists.txt  README.md
blackbox/: blackbox.c
blackbox-provider-client/include/: blackbox_send.h  logger.h
blackbox-provider-client/src/: blackbox_data_clnt.c  blackbox_send.c  logger.c  main.c
blackbox-runner-server/include/: blackbox_receive.h  ip_addr_utility.h  logger.h  popen3.h
blackbox-runner-server/src/: blackbox_data_proc.c  blackbox_data_svc.c  blackbox_receive.c  ip_addr_utility.c  logger.c  logger_data_clnt.c  popen3.c
common/: blackbox  blackbox_data.h  blackbox_data.x  blackbox_data_xdr.c  logger_data.h  logger_data.x  logger_data_xdr.c  progress_bar.c  progress_bar.h
logger-server/include/: logger_server.h
logger-server/src/: logger_data_proc.c  logger_data_svc.c  logger_server.c
